--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "trojan/app/Qv2ray"]
-	path = trojan/app/Qv2ray
+[submodule "v2ray/app/Qv2ray"]
+	path = v2ray/app/Qv2ray
 	url = https://github.com/Qv2ray/Qv2ray
